# yoink-py

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  ROADMAP.md  pyproject.toml
.yoink/: access.yaml  config.yaml
docs/: index.html
example/: .gitignore  README.md  server.sh
yoink/: access.py  cli.py  crypto.py  identity.py  secrets.py  store.py
