[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yoink-py"
version = "0.1.0"
description = "Proof-of-concept: encrypted git-native secrets for developer teams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["click>=8.1"]
keywords = ["secrets", "encryption", "age", "devtools", "dotenv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jack-kitto/yoink-py"
Issues = "https://github.com/jack-kitto/yoink-py/issues"

[project.scripts]
yoink = "yoink.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yoink*"]
